# HiMu

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/videomme/: 347-1.json  347-2.json  347-3.json  580-1.json  580-2.json  580-3.json  LVRcD_-ht3g.srt  VQKpMmBDtZo.srt  download_video.py
examples/: 01_basic.py  01_with_candidates.py  02_multi_gpu.py  02_with_candidates.py  03_cached_features.py  03_multi_gpu.py  04_cached_features.py  04_qwen_videoqa.py  05_gpt4o_videoqa.py  05_qwen_videoqa.py  06_gpt4o_videoqa.py  06_visual_only.py  07_visual_only.py  _utils.py
himu/: __init__.py  _types.py  audio_io.py  cache.py  clip_models.py  config.py  engine.py  llm.py  logic.py  normalization.py  selection.py  selector.py  smoothing.py  video_io.py
himu/experts/: __init__.py  asr.py  base.py  clap.py  clip.py  factory.py  ocr.py  ovd.py  yolo.py
tests/: test_engine.py  test_logic.py  test_normalization.py  test_selection.py  test_smoothing.py
